--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
-mkdir -p .github/workflows
+rm -f .github/workflows/deploy.yml
 
 cat <<'EOF' > .github/workflows/deploy.yml
-name: 🚀 Terraform + Cloud Run Deploy
+name: "Terraform and Cloud Run Deploy"
 
 on:
   push:
@@ -10,42 +10,42 @@ on:
 
 jobs:
   deploy:
-    name: Deploy Backend to Cloud Run
+    name: "Deploy Backend to Cloud Run"
     runs-on: ubuntu-latest
 
     permissions:
-      contents: 'read'
-      id-token: 'write'
+      contents: read
+      id-token: write
 
     steps:
-      - name: 📦 Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: 🧰 Set up Google Cloud SDK
+      - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: 🔧 Setup Terraform
+      - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.0
 
-      - name: 🌍 Terraform Init
+      - name: Terraform Init
         working-directory: ./terraform
         run: terraform init -input=false
 
-      - name: 🏗️ Terraform Apply
+      - name: Terraform Apply
         working-directory: ./terraform
         run: terraform apply -auto-approve -input=false -var="image_url=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1"
 
-      - name: 🐳 Build & Push Docker Image
+      - name: Build & Push Docker Image
         run: |
           gcloud builds submit ./app --tag us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1
 
-      - name: 🚀 Deploy to Cloud Run
+      - name: Deploy to Cloud Run
         run: |
           gcloud run deploy backend-app \
             --image us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1 \
