--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,3 @@
-rm -f .github/workflows/deploy.yml
-
-mkdir -p .github/workflows
-
-cat <<'EOF' > .github/workflows/deploy.yml
 name: Terraform_and_Cloud_Run_Deploy
 
 on:
@@ -26,31 +21,49 @@ jobs:
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+      - name: Write service account key to file (safe for escaped \n)
+        run: |
+          printf '%b' "$GCP_SA_KEY" > "$HOME/gcp-key.json"
+          chmod 600 "$HOME/gcp-key.json"
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Validate credentials JSON
+        run: jq -e . "$HOME/gcp-key.json" >/dev/null || (echo "Invalid JSON credentials file" && exit 1)
+
+      - name: Set GOOGLE_APPLICATION_CREDENTIALS
+        run: echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json" >> $GITHUB_ENV
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.6.0
+          terraform_version: 1.5.7
 
       - name: Terraform Init
-        working-directory: ./terraform
-        run: terraform init -input=false
+        run: terraform init -input=false -chdir="./terraform"
+
+      - name: Terraform Plan
+        run: |
+          terraform plan -input=false -chdir="./terraform" \
+            -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
+            -var="credentials_file=$HOME/gcp-key.json" \
+            -var="image_url=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1" \
+            -var="app_name=backend-app" \
+            -var="region=us-central1"
 
       - name: Terraform Apply
-        working-directory: ./terraform
-        run: terraform apply -auto-approve -input=false -var="image_url=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1"
-
-      - name: Build & Push Docker Image
         run: |
-          gcloud builds submit ./app --tag us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1
+          terraform apply -auto-approve -input=false -chdir="./terraform" \
+            -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
+            -var="credentials_file=$HOME/gcp-key.json" \
+            -var="image_url=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1" \
+            -var="app_name=backend-app" \
+            -var="region=us-central1"
 
-      - name: Deploy to Cloud Run
+      - name: Output Cloud Run URL
         run: |
-          gcloud run deploy backend-app \
-            --image us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1 \
-            --region us-central1 \
-            --allow-unauthenticated
-EOF
+          terraform output -raw service_url -chdir="./terraform" || \
+          terraform output -json -chdir="./terraform" | jq -r ".service_url.value // empty"
