--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch: {}
 
 jobs:
   deploy:
@@ -24,19 +25,46 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Write service account key to file
-        run: echo '${{ secrets.GCP_SA_KEY }}' > $HOME/gcp-key.json
+      - name: Write service account key to file (safe for escaped \n)
+        run: |
+          printf '%b' "$GCP_SA_KEY" > "$HOME/gcp-key.json"
+          chmod 600 "$HOME/gcp-key.json"
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Validate credentials JSON
+        run: jq -e . "$HOME/gcp-key.json" >/dev/null || (echo "Invalid JSON credentials file" && exit 1)
+
+      - name: Set GOOGLE_APPLICATION_CREDENTIALS
+        run: echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json" >> $GITHUB_ENV
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.7
 
       - name: Terraform Init
-        working-directory: .
-        run: terraform init
+        run: terraform init -input=false -chdir="./terraform"
+
+      - name: Terraform Plan
+        run: |
+          terraform plan -input=false -chdir="./terraform" \
+            -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
+            -var="credentials_file=$HOME/gcp-key.json" \
+            -var="image_url=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1" \
+            -var="app_name=backend-app" \
+            -var="region=us-central1"
 
       - name: Terraform Apply
-        working-directory: .
-        run: terraform apply -auto-approve -input=false \
-          -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
-          -var="credentials_file=$HOME/gcp-key.json" \
-          -var="image_url=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1"
+        run: |
+          terraform apply -auto-approve -input=false -chdir="./terraform" \
+            -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
+            -var="credentials_file=$HOME/gcp-key.json" \
+            -var="image_url=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1" \
+            -var="app_name=backend-app" \
+            -var="region=us-central1"
+
+      - name: Output Cloud Run URL
+        run: |
+          terraform output -raw service_url -chdir="./terraform" || \
+          terraform output -json -chdir="./terraform" | jq -r ".service_url.value // empty"
