--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,64 +1,71 @@
-name: Terraform Apply (GitHub Actions)
+name: Terraform_and_Cloud_Run_Deploy
 
 on:
-  workflow_dispatch: {}
   push:
-    branches: [ main ]
+    branches:
+      - main
+  workflow_dispatch: {}
 
 jobs:
-  terraform-apply:
+  deploy:
     runs-on: ubuntu-latest
-    env:
-      TF_DIR: terraform
-      IMAGE_TAG: v1
+    permissions:
+      contents: read
+      id-token: write
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
         with:
-          terraform_version: 1.5.7
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Install jq
-        run: sudo apt-get update && sudo apt-get install -y jq
-
-      - name: Write GCP credentials file
+      - name: Write service account key to file (safe for escaped \n)
         run: |
-          echo "$GCP_SA_KEY" > "$HOME/gcp-key.json"
+          printf '%b' "$GCP_SA_KEY" > "$HOME/gcp-key.json"
           chmod 600 "$HOME/gcp-key.json"
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
 
+      - name: Validate credentials JSON
+        run: jq -e . "$HOME/gcp-key.json" >/dev/null || (echo "Invalid JSON credentials file" && exit 1)
+
       - name: Set GOOGLE_APPLICATION_CREDENTIALS
         run: echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json" >> $GITHUB_ENV
 
-      - name: Terraform init
-        run: terraform init -input=false -chdir="${{ env.TF_DIR }}"
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.7
 
-      - name: Terraform plan
+      - name: Terraform Init
+        working-directory: ./terraform
+        run: terraform init -input=false
+
+      - name: Terraform Plan
+        working-directory: ./terraform
         run: |
-          terraform plan -input=false -chdir="${{ env.TF_DIR }}" \
-            -var="project_id=${{ secrets.PROJECT_ID }}" \
+          terraform plan -input=false \
+            -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
             -var="credentials_file=$HOME/gcp-key.json" \
-            -var="image_url=us-central1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/cloudrun-repo/backend-app:${IMAGE_TAG}" \
+            -var="image_url=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1" \
             -var="app_name=backend-app" \
             -var="region=us-central1"
 
-      - name: Terraform apply
+      - name: Terraform Apply
+        working-directory: ./terraform
         run: |
-          terraform apply -auto-approve -input=false -chdir="${{ env.TF_DIR }}" \
-            -var="project_id=${{ secrets.PROJECT_ID }}" \
+          terraform apply -auto-approve -input=false \
+            -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
             -var="credentials_file=$HOME/gcp-key.json" \
-            -var="image_url=us-central1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/cloudrun-repo/backend-app:${IMAGE_TAG}" \
+            -var="image_url=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1" \
             -var="app_name=backend-app" \
             -var="region=us-central1"
 
-      - name: Show service URL
+      - name: Output Cloud Run URL
+        working-directory: ./terraform
         run: |
-          if terraform output -raw service_url -chdir="${{ env.TF_DIR }}" >/dev/null 2>&1; then
-            terraform output -raw service_url -chdir="${{ env.TF_DIR }}"
-          else
-            terraform output -json -chdir="${{ env.TF_DIR }}" | jq -r ".service_url.value // empty"
-          fi
+          terraform output -raw service_url || terraform output -json | jq -r ".service_url.value // empty"
