--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,71 +1,1 @@
-name: Terraform_and_Cloud_Run_Deploy
-
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch: {}
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-
-      - name: Write service account key to file (safe for escaped \n)
-        run: |
-          printf '%b' "$GCP_SA_KEY" > "$HOME/gcp-key.json"
-          chmod 600 "$HOME/gcp-key.json"
-        env:
-          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Validate credentials JSON
-        run: jq -e . "$HOME/gcp-key.json" >/dev/null || (echo "Invalid JSON credentials file" && exit 1)
-
-      - name: Set GOOGLE_APPLICATION_CREDENTIALS
-        run: echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json" >> $GITHUB_ENV
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.5.7
-
-      - name: Terraform Init
-        working-directory: ./terraform
-        run: terraform init -input=false
-
-      - name: Terraform Plan
-        working-directory: ./terraform
-        run: |
-          terraform plan -input=false \
-            -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
-            -var="credentials_file=$HOME/gcp-key.json" \
-            -var="image_url=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1" \
-            -var="app_name=backend-app" \
-            -var="region=us-central1"
-
-      - name: Terraform Apply
-        working-directory: ./terraform
-        run: |
-          terraform apply -auto-approve -input=false \
-            -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
-            -var="credentials_file=$HOME/gcp-key.json" \
-            -var="image_url=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloudrun-repo/backend-app:v1" \
-            -var="app_name=backend-app" \
-            -var="region=us-central1"
-
-      - name: Output Cloud Run URL
-        working-directory: ./terraform
-        run: |
-          terraform output -raw service_url || terraform output -json | jq -r ".service_url.value // empty"
+# (paste the debug YAML here exactly)
