--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,21 +19,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # ✅ Write and validate your service account key
-      - name: Write service account key to file (safe for escaped \n)
+      # ✅ Decode base64 secret safely — no JSON escaping issues
+      - name: Decode service account key
         run: |
-          printf '%b' "$GCP_SA_KEY" > "$HOME/gcp-key.json"
+          echo "$GCP_SA_KEY_B64" | base64 --decode > "$HOME/gcp-key.json"
           chmod 600 "$HOME/gcp-key.json"
         env:
-          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Validate credentials JSON
-        run: jq -e . "$HOME/gcp-key.json" >/dev/null || (echo "Invalid JSON credentials file" && exit 1)
+          GCP_SA_KEY_B64: ${{ secrets.GCP_SA_KEY_B64 }}
 
       - name: Set GOOGLE_APPLICATION_CREDENTIALS
         run: echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json" >> $GITHUB_ENV
 
-      # ✅ Terraform setup
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
@@ -63,7 +59,6 @@ jobs:
             -var="app_name=backend-app" \
             -var="region=us-central1"
 
-      # ✅ Show Cloud Run URL clearly at the end
       - name: Show Cloud Run URL
         working-directory: ./terraform
         run: |
@@ -73,12 +68,3 @@ jobs:
           echo "✅ Cloud Run deployed successfully!"
           echo "🌍 URL: $SERVICE_URL"
           echo "======================================"
-
-      # Optional debug logs
-      - name: Upload terraform debug log (always)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: terraform-log
-          path: terraform.log
-          retention-days: 7
